edit(fix) add author text increased contrast

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -79,7 +79,7 @@ body {
 
 /* Author text styling */
 .author {
-    color: #d9e5d6;
+    color: #eff0f5;
     margin: 4px;
     text-transform: uppercase;
 }
